--- a/#src/scss/_order.scss
+++ b/#src/scss/_order.scss
@@ -63,16 +63,16 @@
     counter-reset: num;
   }
   
-  .page-title{
-    font-family: Bebas Neue;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 111%;
-    letter-spacing: 0.08em;
-    font-feature-settings: 'pnum' on, 'lnum' on;
-    color: #FFFFFF;
-  }
+  // .page-title{
+  //   font-family: Bebas Neue;
+  //   font-style: normal;
+  //   font-weight: bold;
+  //   font-size: 36px;
+  //   line-height: 111%;
+  //   letter-spacing: 0.08em;
+  //   font-feature-settings: 'pnum' on, 'lnum' on;
+  //   color: #FFFFFF;
+  // }
   
   .step-title-block{
     width: 100%;
