--- a/#src/scss/_about.scss
+++ b/#src/scss/_about.scss
@@ -1,5 +1,9 @@
 .info-block{
     display: flex;
+    width:calc(100% - 100px);
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 120px;
   }
   
   .info-block__nav{
