--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -17,8 +17,8 @@ aside::-webkit-scrollbar {
 }
 
 body{
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
     min-height: 100vh;
     overflow-x: hidden;
 }
