--- a/#src/scss/_UI.scss
+++ b/#src/scss/_UI.scss
@@ -111,6 +111,12 @@
     
 }
 
+.btn[disabled]{
+    background: #4170B7;
+    color: #fff;
+    opacity:0.3;
+}
+
 .link{
     font-family: Akrobat;
     font-style: normal;
