--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -2009,3 +2009,123 @@ overflow-y: hidden;
 
 @import "_about.scss";
 @import "_order.scss";
+
+.modal{
+    width: 370px;
+    // border: 1px solid #000;
+    display:none;
+
+    &-request{
+        height: 569px;
+        padding: 47px 50px 55px;
+    }
+
+    &-success{
+        height: 400px;
+        background: #4170B7;
+
+        &__inner{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            padding: 0 28px 43px;
+        }
+
+        &__title{
+            font-family: Akrobat;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 36px;
+            line-height: 133%;
+            color: #fff;
+            margin: 0;
+            margin-bottom: 10px;
+            padding: 0 20px;
+            margin-top: -40px;
+        }
+    
+        &__subtitle{
+            font-family: Akrobat;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 23px;
+            line-height: 133%;
+            color: #fff;
+            padding:0 20px;
+        }
+    }
+}
+
+.callback-form{
+    display: flex;
+    flex-direction: column;
+
+    &__title{
+        font-family: Akrobat;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 36px;
+        line-height: 133%;
+        color: #141622;
+        margin: 0;
+    }
+
+    &__subtitle{
+        font-family: Akrobat;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 23px;
+        line-height: 133%;
+        color: #141622;
+    }
+
+    &-input{
+        margin-top: 27px;
+        width: 100%;
+
+        &:nth-child(4){
+            margin-bottom: 30px;
+        }
+
+        input{
+            background: #FFFFFF;
+            border: 1px solid #A7B1C0;
+            box-sizing: border-box;
+            height: 55px;
+            margin-top: 10px;
+            width: 100%;
+            outline: none;
+            padding: 18px 20px;
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 112%;
+            color: #141622;
+            transition: all .3s;
+
+            &:hover{
+                border: 1px solid #686B80;
+            }
+
+            &:focus{
+                border: 1px solid #A7B1C0;
+            }
+        }
+
+        label{
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 112%;
+            color: #686B80;
+            margin-bottom: 10px;
+        }
+    }
+
+    &__btn{
+        margin-bottom: 27px;
+    }
+}
